# splinter

./: CMakeLists.txt  MouseMenu.qml  README.rst  Section.qml  main.cpp  main.qml  osd.cpp  osd.h  qml.qrc  runner.cpp  runner.h  server.cpp  server.h  splitmodel.cpp  splitmodel.h  splitmodellist.cpp  splitmodellist.h  utils.cpp  utils.h
samples/: splits.json  talosparser.py
